Modify: Change Issue list scrollbar color

--- a/src/components/body/IssueList.css
+++ b/src/components/body/IssueList.css
@@ -61,6 +61,7 @@
     -ms-overflow-style: auto; /* for Internet Explorer, Edge */
     scrollbar-width: thin; /* for Firefox */
     overflow-x: hidden;
+    scrollbar-color: rgba(103, 144, 205, 0.5) rgba(16, 16, 16, 0.5);
 }
 
 
